syntax = "proto3";

package comment;
option go_package="./comment";

enum Status {
  OK = 0;
  notOK = 1;
}

message UserInfo {
  int64 Id = 1;
  string Username = 2;
  int64 FollowCount = 3;
  int64 FollowerCount = 4;
  bool IsFollow = 5;
  string Avatar = 6;
  string BackgroundImage = 7;
  string Signature = 8;
  string TotalFavorited = 9;
  int64 WorkCount = 10;
  int64 FavoriteCount = 11;
}

message CommentInfo {
  int64 Id = 1;
  int64 UserId = 2;
  UserInfo User = 3;
  string Content = 4;
  int64 CreateTime = 5;
}

message ActionReq {
  int64 UserId = 1;
  int64 VideoId = 2;
  int32 ActionType = 3;
  string Content = 4;
  int64 CommentId = 5;
}

message ActionRes {
  Status Status = 1;
  CommentInfo CommentInfo = 2;
}

message ListReq {
  int64 UserId = 1;
  int64 VideoId = 2;
}

message ListRes {
  Status Status = 1;
  repeated CommentInfo CommentList = 2;
}

message GetCommentCountReq {
  repeated int64 VideoIds = 1;
}

message GetCommentCountRes {
  repeated int64 Counts = 1;
}

service Comment {
  rpc Action(ActionReq) returns(ActionRes);
  rpc List(ListReq) returns(ListRes);
  rpc GetCommentCount(GetCommentCountReq) returns(GetCommentCountRes);
}
